Chapter13: Configure Logging

--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -33,3 +33,7 @@ spring:
     username: user
     password: password
     connection-timeout: 5s
+
+logging:
+  pattern:
+    level: "%5p [${spring.application.name},%X{trace_id},%X{span_id}]"
