--- a/build.gradle
+++ b/build.gradle
@@ -51,6 +51,10 @@ dependencyManagement {
 	}
 }
 
+springBoot {
+	buildInfo()
+}
+
 bootBuildImage {
 	//builder = "docker.io/paketobuildpacks/builder-jammy-base"
 	imageName = "${project.name}"
